--- a/restaurant.html
+++ b/restaurant.html
@@ -185,15 +185,15 @@
 <div class="modal-body">
 <div class="food-row">
 <span class="food-name">Ролл угорь стандарт</span>
-<strong class="food-price">0 ₽</strong>
+<strong class="food-price" id="counterSoumDisplay">0 ₽</strong>
 <div class="food-counter">
-    <button class="counter-button-minus" onclick="countMinus()">-</button>
+    <button class="counter-button-minus" onclick="countMinus(); counterSoumDisplayM()">-</button>
     <span class="counter" id = "counter">0</span>
-    <button class="counter-button-plus" onclick="countPlus()">+</button>
+    <button class="counter-button-plus" onclick="countPlus(); counterSoumDisplayP()">+</button>
 </div>
 </div>
 <div class="food-row">
-<span class="food-name">Ролл угорь стандарт</span>
+<span class="food-name">Калифорния стандарт</span>
 <strong class="food-price">250 ₽</strong>
 <div class="food-counter">
     <button class="counter-button">-</button>
@@ -230,7 +230,7 @@
     </div>
 </div>
 <div class="modal-footer">
-    <span class="modal-pricetag">0 ₽</span>
+    <span class="modal-pricetag" id="counterSoumBottom">0 ₽</span>
     <div class="footer-buttons">
         <button class="button-checkout button-primary">Оформить заказ</button>
         <button class="button button-close">Отмена</button>
