--- a/restaurant.html
+++ b/restaurant.html
@@ -185,15 +185,33 @@
 <div class="modal-body">
 <div class="food-row">
 <span class="food-name">Ролл угорь стандарт</span>
-<strong class="food-price" id="counterSoumDisplay">0 ₽</strong>
+<strong class="food-price" id="counterSoumDisplay1">0 ₽</strong>
 <div class="food-counter">
-    <button class="counter-button-minus" onclick="countMinus(); counterSoumDisplayM()">-</button>
-    <span class="counter" id = "counter">0</span>
-    <button class="counter-button-plus" onclick="countPlus(); counterSoumDisplayP()">+</button>
-</div>
+    <button class="counter-button-minus minus2501" id="minus2501" onclick="countMinus()">-</button>
+    <span class="counter" id="counter">0</span>
+    <button class="counter-button-plus plus2501" id="plus2501" onclick="countPlus()">+</button>
+</div>  
 </div>
 <div class="food-row">
 <span class="food-name">Калифорния стандарт</span>
+<strong class="food-price" id="counterSoumDisplay2">0 ₽</strong>
+<div class="food-counter">
+    <button class="counter-button minus395" id="minus395" onclick="countMinus2()">-</button>
+    <span class="counter" id="counter2">0</span>
+    <button class="counter-button plus395" id="plus395" onclick="countPlus2()">+</button>
+</div>
+</div>
+<div class="food-row">
+<span class="food-name">Окинава стандарт</span>
+<strong class="food-price" id="counterSoumDisplay3">0 ₽</strong>
+<div class="food-counter">
+    <button class="counter-button minus2503 minusC3" id="minus2503">-</button>
+    <span class="counter" id="counter3">0</span>
+    <button class="counter-button plus2503 plusC3" id="plus2503">+</button>
+</div>
+</div>
+<div class="food-row">
+<span class="food-name">Цезарь маки xl</span>
 <strong class="food-price">250 ₽</strong>
 <div class="food-counter">
     <button class="counter-button">-</button>
@@ -202,30 +220,21 @@
 </div>
 </div>
 <div class="food-row">
-<span class="food-name">Ролл угорь стандарт</span>
-<strong class="food-price">250 ₽</strong>
-<div class="food-counter">
-    <button class="counter-button">-</button>
-    <span class="counter">1</span>
-    <button class="counter-button">+</button>
-</div>
-</div>
-<div class="food-row">
-<span class="food-name">Ролл угорь стандарт</span>
-<strong class="food-price">250 ₽</strong>
-<div class="food-counter">
-    <button class="counter-button">-</button>
-    <span class="counter">1</span>
-    <button class="counter-button">+</button>
-</div>
-</div>
-<div class="food-row">
-    <span class="food-name">Ролл угорь стандарт</span>
-    <strong class="food-price">250 ₽</strong>
+    <span class="food-name">Ясай маки стандарт</span>
+    <strong class="food-price">350 ₽</strong>
     <div class="food-counter">
         <button class="counter-button">-</button>
         <span class="counter">1</span>
         <button class="counter-button">+</button>
+    </div>
+    </div>
+    <div class="food-row">
+    <span class="food-name">Ролл с креветкой стандарт</span>
+    <strong class="food-price">250 ₽</strong>
+    <div class="food-counter">
+        <button class="counter-button">-</button>
+        <span class="counter">1</span>
+         <button class="counter-button">+</button>
     </div>
     </div>
 </div>
