--- a/index.html
+++ b/index.html
@@ -174,18 +174,18 @@
     <span class="food-name">Ролл угорь стандарт</span>
     <strong class="food-price" id="counterSoumDisplay1">0 ₽</strong>
     <div class="food-counter">
-        <button class="counter-button-minus minus2501" id="minus2501" onclick="countMinus()">-</button>
+        <button class="counter-button-minus minusC1 minus2501" id="minus2501">-</button>
         <span class="counter" id="counter">0</span>
-        <button class="counter-button-plus plus2501" id="plus2501" onclick="countPlus()">+</button>
+        <button class="counter-button-plus plusC1 plus2501" id="plus2501">+</button>
     </div>  
     </div>
     <div class="food-row">
     <span class="food-name">Калифорния стандарт</span>
     <strong class="food-price" id="counterSoumDisplay2">0 ₽</strong>
     <div class="food-counter">
-        <button class="counter-button minus395" id="minus395" onclick="countMinus2()">-</button>
+        <button class="counter-button minus395 minusC2" id="minus395">-</button>
         <span class="counter" id="counter2">0</span>
-        <button class="counter-button plus395" id="plus395" onclick="countPlus2()">+</button>
+        <button class="counter-button plus395 plusC2" id="plus395">+</button>
     </div>
     </div>
     <div class="food-row">
@@ -199,29 +199,29 @@
     </div>
     <div class="food-row">
     <span class="food-name">Цезарь маки xl</span>
-    <strong class="food-price">250 ₽</strong>
+    <strong class="food-price" id="counterSoumDisplay4">0 ₽</strong>
     <div class="food-counter">
-        <button class="counter-button">-</button>
-        <span class="counter">1</span>
-        <button class="counter-button">+</button>
+        <button class="counter-button minus2504 minusC4" id="minus2504">-</button>
+        <span class="counter" id="counter4">0</span>
+        <button class="counter-button plus2504 plusC4" id="plus2504">+</button>
     </div>
     </div>
     <div class="food-row">
         <span class="food-name">Ясай маки стандарт</span>
-        <strong class="food-price">350 ₽</strong>
+        <strong class="food-price" id="counterSoumDisplay5">0 ₽</strong>
         <div class="food-counter">
-            <button class="counter-button">-</button>
-            <span class="counter">1</span>
-            <button class="counter-button">+</button>
+            <button class="counter-button minus2505 minusC5" id="minus2505">-</button>
+            <span class="counter" id="counter5">0</span>
+            <button class="counter-button plus2505 plusC5" id="plus2505">+</button>
         </div>
         </div>
         <div class="food-row">
         <span class="food-name">Ролл с креветкой стандарт</span>
-        <strong class="food-price">250 ₽</strong>
+        <strong class="food-price" id="counterSoumDisplay6">0 ₽</strong>
         <div class="food-counter">
-            <button class="counter-button">-</button>
-            <span class="counter">1</span>
-             <button class="counter-button">+</button>
+            <button class="counter-button minus2506 minusC6" id="minus2506">-</button>
+            <span class="counter" id="counter6">0</span>
+            <button class="counter-button plus2506 plusC6" id="plus2506">+</button>
         </div>
         </div>
     </div>
